# ipasir2-cpp

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml  cmake-multi-platform.yml
buildutils/: doxygen_config.in  mingw32_crosscompile_toolchain.cmake
examples/: 01_readme.cpp  02_trivial_portfolio.cpp  03_find_backbones.cpp  04_custom_types.cpp  05_model_counter.cpp  CMakeLists.txt  example_utils.cpp  example_utils.h  example_utils_tests.cpp  main.cpp
examples/input_files/: example.cnf
include/: ipasir2cpp.h  ipasir2cpp_dl.h
testdeps/: CMakeLists.txt
tests/: CMakeLists.txt  add_clause_tests.cpp  query_lit_tests.cpp  solve_tests.cpp  tests.cpp
tests/dlsym/: CMakeLists.txt  dlsym_tests.cpp
tests/main/: CMakeLists.txt  add_clause_tests.cpp  custom_types.h  detail_tests.cpp  ipasir2_mock_doctest.h  ipasir2_mock_factory.h  ipasir2_mock_tests.cpp  options_tests.cpp  query_lit_tests.cpp  set_export_tests.cpp  set_terminate_tests.cpp  solve_tests.cpp  tests.cpp
tests/mock/: CMakeLists.txt  ipasir2_mock.cpp  ipasir2_mock.h  ipasir2_mock_doctest.h  ipasir2_mock_tests.cpp
